--- a/control_server_gui/control_server_gui/gui.html
+++ b/control_server_gui/control_server_gui/gui.html
@@ -22,7 +22,7 @@
 <body ng-app="ControlServerGUI" ng-strict-di>
     <div class="container">
         <div class="row">
-            <h1 class="text-center">PLENCheck for Web</h1>
+            <h1 class="text-center">PLENUtilities for Web</h1>
 
             <div class="col-xs-3 col-xs-offset-1 panel panel-default">
                 <h2>Joint List</h2>
@@ -34,46 +34,26 @@
                 <img class="center-block" src="./assets/img/plen_body.png" alt="PLEN2" width="338" height="500">
             </div>
 
-            <div class="col-xs-3 panel panel-default">
-                <h2>Checker Components</h2>
+            <div class="col-xs-3">
+                <div class="row panel panel-default">
+                    <div class="col-xs-12">
+                        <h2>Config Utilities</h2>
 
-                <div class="form-group">
-                    <label for="mode-selector" class="control-label">Apply Mode</label>
-                    <select class="form-control" id="mode-selector">
-                        <option>Native ($AN)</option>
-                        <option>Diff ($AD)</option>
-                    </select>
-                </div>
-
-                <div class="form-group">
-                    <label class="control-label">Set Value</label>
-                    <input type="range" min="-1800" max="1800">
-                </div>
-
-                <div class="form-group">
-                    <div class="row">
-                        <div class="col-xs-4">
-                            <button class="btn btn-default btn-block" type="button">Max</button>
-                        </div>
-                        <div class="col-xs-4">
-                            <button class="btn btn-default btn-block" type="button">Home</button>
-                        </div>
-                        <div class="col-xs-4">
-                            <button class="btn btn-default btn-block" type="button">Min</button>
-                        </div>
+                        <apply-mode-selector></apply-mode-selector>
+                        <value-changer></value-changer>
+                        <setter-buttons></setter-buttons>
                     </div>
                 </div>
 
-                <div class="form-group">
-                    <label for="input-motion">Input Motion(s)</label>
-                    <input type="file" accept=".json" multiple id="input-motion">
-                </div>
+                <div class="row panel panel-default">
+                    <div class="col-xs-12">
+                        <h2>Motion Utility</h2>
 
-                <div class="form-group">
-                    <button class="btn btn-primary btn-block" type="button">Install</button>
+                        <load-button></load-button>
+                        <install-button></install-button>
+                        <progress-bar></progress-bar>
+                    </div>
                 </div>
-
-                <progress-bar></progress-bar>
             </div>
         </div>
     </div>
