--- a/control_server_gui/control_server_gui/gui.html
+++ b/control_server_gui/control_server_gui/gui.html
@@ -1,21 +1,22 @@
 ﻿<!DOCTYPE html>
+
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <title>PLENCheck for Web</title>
+    <title>PLENUtilities for Web</title>
     <link rel="icon" href="./assets/img/favicon.ico" />
 
-    <!-- Loading style file(s). -->
+    <!-- Load style file(s). -->
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/index.min.css">
 
-    <!-- Loading javascript lib(s). -->
+    <!-- Load javascript lib(s). -->
     <script src="./assets/js/lodash.min.js"></script>
     <script src="./assets/js/jquery.min.js"></script>
-    <!--<script src="./assets/js/angular.js"></script>-->
     <script src="./assets/js/angular.min.js"></script>
 
-    <!-- Loading the application. -->
+    <!-- Load the application. -->
     <script src="./assets/js/bundle.min.js"></script>
 </head>
 
@@ -24,35 +25,43 @@
         <div class="row">
             <h1 class="text-center">PLENUtilities for Web</h1>
 
+            <!-- DEPRICATED: The old custom component was replaced "JointSelector".
             <div class="col-xs-3 col-xs-offset-1 panel panel-default">
                 <h2>Joint List</h2>
-
                 <joint-radio-list></joint-radio-list>
             </div>
+            -->
 
-            <div class="col-xs-4">
-                <img class="center-block" src="./assets/img/plen_body.png" alt="PLEN2" width="338" height="500">
+            <div class="col-xs-6 col-md-4 col-md-offset-2 text-center">
+                <joint-selector></joint-selector>
             </div>
 
-            <div class="col-xs-3">
+            <div class="col-xs-6 col-md-4">
                 <div class="row panel panel-default">
                     <div class="col-xs-12">
                         <h2>Config Utilities</h2>
-
                         <value-changer></value-changer>
                         <setter-buttons></setter-buttons>
                     </div>
                 </div>
 
-                <!--<div class="row panel panel-default">
+                <div class="row panel panel-default">
                     <div class="col-xs-12">
-                        <h2>Motion Utility</h2>
+                        <h2>Connection Status</h2>
+                        <connect-button></connect-button>
+                    </div>
+                </div>
 
+                <!-- TODO: Implement the function that insatalls motion(s).
+                <div class="row panel panel-default">
+                    <div class="col-xs-12">
+                        <h2>Motion Utilities</h2>
                         <load-button></load-button>
                         <install-button></install-button>
                         <progress-bar></progress-bar>
                     </div>
-                </div>-->
+                </div>
+                -->
             </div>
         </div>
     </div>
