--- a/control_server_gui/control_server_gui/gui.html
+++ b/control_server_gui/control_server_gui/gui.html
@@ -7,16 +7,19 @@
     <title>PLENUtilities for Web</title>
     <link rel="icon" href="./assets/img/favicon.ico" />
 
-    <!-- Load style file(s). -->
+    <!-- Load style file(s).
+    ======================================================================= -->
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/css/index.min.css">
 
-    <!-- Load javascript lib(s). -->
+    <!-- Load javascript lib(s).
+    ======================================================================= -->
     <script src="./assets/js/lodash.min.js"></script>
     <script src="./assets/js/jquery.min.js"></script>
     <script src="./assets/js/angular.min.js"></script>
 
-    <!-- Load the application. -->
+    <!-- Load the application.
+    ======================================================================= -->
     <script src="./assets/js/bundle.min.js"></script>
 </head>
 
@@ -39,7 +42,7 @@
             <div class="col-xs-6 col-md-4">
                 <div class="row panel panel-default">
                     <div class="col-xs-12">
-                        <h2>Config Utilities</h2>
+                        <h2><span class="glyphicon glyphicon-wrench"></span> Config Utilities</h2>
                         <value-changer></value-changer>
                         <setter-buttons></setter-buttons>
                     </div>
@@ -47,21 +50,23 @@
 
                 <div class="row panel panel-default">
                     <div class="col-xs-12">
-                        <h2>Connection Status</h2>
-                        <connect-button></connect-button>
-                    </div>
-                </div>
-
-                <!-- TODO: Implement the function that insatalls motion(s).
-                <div class="row panel panel-default">
-                    <div class="col-xs-12">
-                        <h2>Motion Utilities</h2>
-                        <load-button></load-button>
-                        <install-button></install-button>
+                        <h2><span class="glyphicon glyphicon-open"></span> Motion Utilitie</h2>
+                        <div class="form-group">
+                            <div class="btn-group btn-group-justified" role="group">
+                                <load-button></load-button>
+                                <install-button></install-button>
+                            </div>
+                        </div>
                         <progress-bar></progress-bar>
                     </div>
                 </div>
-                -->
+
+                <div class="row panel panel-default">
+                    <div class="col-xs-12">
+                        <h2><span class="glyphicon glyphicon-signal"></span> Connection Status</h2>
+                        <connect-button></connect-button>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
