--- a/control_server_gui/control_server_gui/gui.html
+++ b/control_server_gui/control_server_gui/gui.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>PLEN Utils for Web</title>
+    <title>PLEN Utils | PLEN Project Company Inc.</title>
     <link rel="icon" href="./assets/img/favicon.ico" />
 
     <!-- Load style file(s).
@@ -26,7 +26,7 @@
 <body ng-app="PLEN Utils" ng-strict-di>
     <div class="container">
         <div class="row">
-            <h1 class="text-center">PLEN Utils for Web</h1>
+            <h1 class="text-center">PLEN Utils | PLEN Project Company Inc.</h1>
 
             <!-- DEPRICATED: The old custom component was replaced "JointSelector".
             <div class="col-xs-3 col-xs-offset-1 panel panel-default">
