--- a/control_server_gui/control_server_gui/gui.html
+++ b/control_server_gui/control_server_gui/gui.html
@@ -3,73 +3,82 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <title>PLEN Utils | PLEN Project Company Inc.</title>
-    <link rel="icon" href="./assets/img/favicon.ico" />
+  <meta charset="UTF-8">
+  <meta name="description" content="Configuration application for PLEN series robots.">
+  <meta name="author" content="PLEN Project Company Inc.">
+  <title>PLEN Utils | PLEN Project Company Inc.</title>
+  <link rel="icon" href="./assets/img/favicon.ico">
 
-    <!-- Load style file(s).
-    ======================================================================= -->
-    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="./assets/css/index.min.css">
+  <!-- Define open graoh protocol.
+  ========================================================================= -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="PLEN Utils | PLEN Project Company Inc.">
+  <meta property="og:url" content="https://playground.plen.jp/apps/plen-utils/">
+  <meta property="og:image" content="https://playground.plen.jp/apps/plen-utils/assets/img/og-image.png">
 
-    <!-- Load javascript lib(s).
-    ======================================================================= -->
-    <script src="./assets/js/lodash.min.js"></script>
-    <script src="./assets/js/jquery.min.js"></script>
-    <script src="./assets/js/angular.min.js"></script>
+  <!-- Load style file(s).
+  ========================================================================= -->
+  <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./assets/css/index.min.css">
 
-    <!-- Load the application.
-    ======================================================================= -->
-    <script src="./assets/js/bundle.min.js"></script>
+  <!-- Load javascript lib(s).
+  ========================================================================= -->
+  <script src="./assets/js/lodash.min.js"></script>
+  <script src="./assets/js/jquery.min.js"></script>
+  <script src="./assets/js/angular.min.js"></script>
+
+  <!-- Load the application.
+  ========================================================================= -->
+  <script src="./assets/js/bundle.min.js"></script>
 </head>
 
 <body ng-app="PLEN Utils" ng-strict-di>
-    <div class="container">
-        <div class="row">
-            <h1 class="text-center">PLEN Utils | PLEN Project Company Inc.</h1>
+  <div class="container">
+    <div class="row">
+      <h1 class="text-center">PLEN Utils | PLEN Project Company Inc.</h1>
 
-            <!-- DEPRICATED: The old custom component was replaced "JointSelector".
-            <div class="col-xs-3 col-xs-offset-1 panel panel-default">
-                <h2>Joint List</h2>
-                <joint-radio-list></joint-radio-list>
-            </div>
-            -->
+      <!-- DEPRICATED: The old custom component was replaced "JointSelector".
+      <div class="col-xs-3 col-xs-offset-1 panel panel-default">
+        <h2>Joint List</h2>
+        <joint-radio-list></joint-radio-list>
+      </div>
+      -->
 
-            <div class="col-xs-6 col-md-4 col-md-offset-2 text-center">
-                <joint-selector></joint-selector>
-            </div>
+      <div class="col-xs-6 col-md-4 col-md-offset-2 text-center">
+        <joint-selector></joint-selector>
+      </div>
 
-            <div class="col-xs-6 col-md-4">
-                <div class="row panel panel-default">
-                    <div class="col-xs-12">
-                        <h2><span class="glyphicon glyphicon-wrench"></span> Config Utilities</h2>
-                        <value-changer></value-changer>
-                        <setter-buttons></setter-buttons>
-                    </div>
-                </div>
-
-                <div class="row panel panel-default">
-                    <div class="col-xs-12">
-                        <h2><span class="glyphicon glyphicon-open"></span> Motion Utilitie</h2>
-                        <div class="form-group">
-                            <div class="btn-group btn-group-justified" role="group">
-                                <load-button></load-button>
-                                <install-button></install-button>
-                            </div>
-                        </div>
-                        <progress-bar></progress-bar>
-                    </div>
-                </div>
-
-                <div class="row panel panel-default">
-                    <div class="col-xs-12">
-                        <h2><span class="glyphicon glyphicon-signal"></span> Connection Status</h2>
-                        <connect-button></connect-button>
-                    </div>
-                </div>
-            </div>
+      <div class="col-xs-6 col-md-4">
+        <div class="row panel panel-default">
+          <div class="col-xs-12">
+            <h2><span class="glyphicon glyphicon-wrench"></span> Config Utilities</h2>
+            <value-changer></value-changer>
+            <setter-buttons></setter-buttons>
+          </div>
         </div>
+
+        <div class="row panel panel-default">
+          <div class="col-xs-12">
+            <h2><span class="glyphicon glyphicon-open"></span> Motion Utility</h2>
+            <div class="form-group">
+              <div class="btn-group btn-group-justified" role="group">
+                <load-button></load-button>
+                <install-button></install-button>
+              </div>
+            </div>
+            <progress-bar></progress-bar>
+          </div>
+        </div>
+
+        <div class="row panel panel-default">
+          <div class="col-xs-12">
+            <h2><span class="glyphicon glyphicon-signal"></span> Connection Status</h2>
+            <connect-button></connect-button>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
 </body>
 
 </html>
