Change the application starting up method

--- a/control_server_gui/control_server_gui/gui.html
+++ b/control_server_gui/control_server_gui/gui.html
@@ -32,7 +32,7 @@
   <script src="./assets/js/bundle.min.js"></script>
 </head>
 
-<body ng-app="PLEN Utils" ng-strict-di>
+<body>
   <div class="container">
     <div class="row">
       <h1 class="text-center">PLEN Utils | PLEN Project Company Inc.</h1>
